Se implementa compilacion y readme